--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.28.0",
